package eapli.base.app.user.console.UI;

public class NewProductOrderUI {
}
