package eapli.base.catalog.application;

public class ViewCatalogController {
}
