package eapli.base.order.application;

public class NewProductOrderController {
}
